--- a/html/cities.html
+++ b/html/cities.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- Bootstrap -->
+    <link href="/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/main.css" rel="stylesheet" />
     <link type="text/css" rel="stylesheet" href="/style.css"/>
     <script type="text/javascript" src="/d3/d3.js"></script>
     <script type="text/javascript" src="/d3/d3.layout.js"></script>
@@ -24,6 +28,19 @@ rect {
     </style>
   </head>
   <body>
+    <div class="container">
+      <div class="navbar">
+        <div class="navbar-inner">
+          <ul class="nav">
+              <li>
+                <a href="/">PM2.5</a>
+              </li>
+              <li><a href="/map">Map</a></li>
+              <li class="active"><a href="/allcities">Cities</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <div id="body">
       <div id="footer">
         Air Pollution Data in China
@@ -126,5 +143,6 @@ function zoom(d) {
 }
 
     </script>
+    <script src="/bootstrap.min.js"></script>
   </body>
 </html>
