--- a/html/index.html
+++ b/html/index.html
@@ -32,6 +32,7 @@
   						</li>
   						<li><a href="/map">Map</a></li>
   						<li><a href="/allcities">Cities</a></li>
+                        <li><a href="/about">About</a></li>
 					</ul>
 				</div>
 			</div>
