--- a/html/zoomable_treemap.html
+++ b/html/zoomable_treemap.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-    <link type="text/css" rel="stylesheet" href="style.css"/>
-    <script type="text/javascript" src="d3/d3.js"></script>
-    <script type="text/javascript" src="d3/d3.layout.js"></script>
+    <link type="text/css" rel="stylesheet" href="../css/style.css"/>
+    <script type="text/javascript" src="../js/d3/d3.js"></script>
+    <script type="text/javascript" src="../js/d3/d3.layout.js"></script>
     <style type="text/css">
 
 .chart {
