PM25.in API call

--- a/html/about.html
+++ b/html/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    	<head>
-		<title>PM2.5 Visualization | Home</title>
+		<title>AQI China Visualization | About</title>
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     	<!-- Bootstrap -->
     	<link href="/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -18,7 +18,7 @@
 				<div class="navbar-inner">
 					<ul class="nav">
   						<li>
-    						<a href="/">PM2.5</a>
+    						<a href="/">Home</a>
   						</li>
   						<li><a href="/map">Map</a></li>
   						<li><a href="/allcities">Cities</a></li>
