--- a/html/map.html
+++ b/html/map.html
@@ -54,7 +54,7 @@
     						<a href="/">Home</a>
   						</li>
   						<li class="active"><a href="/map">Map</a></li>
-  						<li><a href="/allcities">Cities</a></li>
+  						<!--<li><a href="/allcities">Cities</a></li>-->
                         <li><a href="/about">About</a></li>
 					</ul>
 				</div>
