--- a/html/about.html
+++ b/html/about.html
@@ -21,7 +21,7 @@
     						<a href="/">Home</a>
   						</li>
   						<li><a href="/map">Map</a></li>
-  						<li><a href="/allcities">Cities</a></li>
+  						<!--<li><a href="/allcities">Cities</a></li>-->
                         <li class="active"><a href="/about">About</a></li>
 					</ul>
 				</div>
