--- a/html/map.html
+++ b/html/map.html
@@ -61,7 +61,7 @@
   						</li>
   						<li class="active"><a href="/map">Map</a></li>
   						<!--<li><a href="/allcities">Cities</a></li>-->
-                        <li><a href="/about">About</a></li>
+                        <li><a href="https://github.com/hhua/PM2.5">About</a></li>
 					</ul>
 				</div>
 			</div>
@@ -92,6 +92,13 @@
                 <div class="span1 offset9">Hazardous</div>
             </div>
             <div id="infotable"></div>
+            <div id="footer">
+                <hr />
+                <br />
+                <div style="margin: 10px auto;">
+                    &copy;2013. All rights Reserved. <a href="https://twitter.com/AlanHuaCN">@Han Hua</a>
+                </div>
+            </div>
 		</div>
 
 		<script type="text/javascript">
