--- a/html/map.html
+++ b/html/map.html
@@ -95,7 +95,7 @@
             <div id="footer">
                 <hr />
                 <br />
-                <div style="margin: 10px auto;">
+                <div style="margin: 10px auto; text-align: right;">
                     &copy;2013. All rights Reserved. <a href="https://twitter.com/AlanHuaCN">@Han Hua</a>
                 </div>
             </div>
